removing footnotes pages 21-29

--- a/groth1.tex
+++ b/groth1.tex
@@ -2729,7 +2729,7 @@ We will have a running example with $\lambda=(7,7,7,4,4)$ and $\mu=(5,3,2)$.
 \subsection{Irreducible components}
 We recall that a \textit{12-rpp} means an rpp whose entries all belong to the set $\left\{1, 2\right\}$. 
 
-Given a 12-rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $(i+1,j) \in \lm$ and $T(i+1,j)=2$. (In other words, $\NS(T)$ is the set of all non-redundant cells in $T$ which are filled with a $1$ and which are not the lowest cells in their columns.)
+Given a 12-rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $(i+1,j) \in \lm$ and $T(i+1,j)=2$. In other words, $\NS(T)$ is the set of all non-redundant cells in $T$ which are filled with a $1$ and which are not the lowest cells in their columns.
 Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\cdots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we
 %called \textit{the seplist-partition of} $T$ and
 denoted 
@@ -2817,9 +2817,9 @@ For each integer $i$, the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm
 Let $\#\kappa$ denote the length of a partition $\kappa$.
 
 We say that a partition $\seplistvar$ is \textit{admissible} if
-every $k$ satisfies $\supp(i_k) \neq \varnothing$. (This is
+every $k$ satisfies $\supp(i_k) \neq \varnothing$. This is
 clearly satisfied when there exist $j_1<j_2<\cdots<j_s$
-satisfying (\ref{cond:necessary}), but also in other cases.)
+satisfying (\ref{cond:necessary}), but also in other cases.
 Assume that $\seplistvar = \left(i_1 \geq \cdots \geq i_s > 0\right)$ is an admissible partition.
 For two integers $a< b$, we let $\nuab$ denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the (possibly empty) set of all $k$ for which $\supp(i_k)\subseteq [a,b)$. Thus, the number of entries in $\nuab$ is $\#\nuab =q+1$. Similarly, we set $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the set of all $k$ for which $\supp(i_k)\cap [a,b)\neq\emptyset$.
 For example, for $\seplistvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:seplist}, we have 
@@ -2858,9 +2858,11 @@ Suppose now that a partition $\seplistvar$ is reducible, so for some $a<b$ we ge
 j_r=a,\ j_{r+1}=a+1,\ \cdots,\ j_{r+q}=a+q=b-1 .
 \label{eq.reducible.mixblock-j}
 \end{equation}
-Because $\supp(i_r)\subseteq[a,b)$ but $\supp(i_r)\neq\varnothing$ (since $\nu$ is admissible), we have $(i_r,a-1)\notin\lm$. Thus, placing a $1$ into $(i_r,a)$ and $2$'s into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restrictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$ when we place a $2$ into $(i_{r+q}+1,b-1)$ and $1$'s into all cells above. Thus, if a partition $\seplistvar$ is reducible, then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined (by (\ref{eq.reducible.mixblock-j})), and the filling of the rest can be arbitrary -- the problem of existence of a 12-rpp $T$ such that $\seplist(T)=\seplistvar$ reduces to two smaller independent problems of the same kind (one for the columns $1,2,\ldots,a-1$, the other for the columns\footnote{Recall that a 12-rpp of shape $\lm$ cannot have any nonempty column beyond the $\lambda_1$'th one.} $b,b+1,\ldots,\lambda_1$). One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:seplist}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\seplist(T)=(4,3,3,2)$.
+Because $\supp(i_r)\subseteq[a,b)$ but $\supp(i_r)\neq\varnothing$ (since $\nu$ is admissible), we have $(i_r,a-1)\notin\lm$. Thus, placing a $1$ into $(i_r,a)$ and $2$'s into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restrictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$ when we place a $2$ into $(i_{r+q}+1,b-1)$ and $1$'s into all cells above. Thus, if a partition $\seplistvar$ is reducible, then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined by (\ref{eq.reducible.mixblock-j}), and the filling of the rest can be arbitrary -- the problem of existence of a 12-rpp $T$ such that $\seplist(T)=\seplistvar$ reduces to two smaller independent problems of the same kind: one for the columns $1,2,\ldots,a-1$, the other for the columns $b,b+1,\ldots,\lambda_1$. Recall that a 12-rpp of shape $\lm$ cannot have any nonempty column beyond the $\lambda_1$'th one. 
 
-More explicitly, we have thus shown that every nonempty interval $\left[a,b\right) \subseteq \left[1, \lambda_1+1\right)$ satisfying $\#\nuab = b-a$ splits our problem into two independent subproblems. But if two such intervals $\left[a,b\right)$ and $\left[c,d\right)$ satisfy $a\leq c\leq b\leq d$ then their union $[a,d)$ is another such interval (because in this case, inclusion-exclusion gives $\#\nuxy{a}{d} \geq \#\nuab + \#\nuxy{c}{d} - \#\nuxy{c}{b}$, but $\#\nuxy{c}{b}\leq b-c$ by representability of $\nu$).
+One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:seplist}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\seplist(T)=(4,3,3,2)$.
+
+More explicitly, we have thus shown that every nonempty interval $\left[a,b\right) \subseteq \left[1, \lambda_1+1\right)$ satisfying $\#\nuab = b-a$ splits our problem into two independent subproblems. But if two such intervals $\left[a,b\right)$ and $\left[c,d\right)$ satisfy $a\leq c\leq b\leq d$ then their union $[a,d)$ is another such interval, because in this case, inclusion-exclusion gives $\#\nuxy{a}{d} \geq \#\nuab + \#\nuxy{c}{d} - \#\nuxy{c}{b}$, but $\#\nuxy{c}{b}\leq b-c$ by representability of $\nu$.
 \begin{comment}
 \footnote{\textit{Proof.} Assume that two intervals $\left[a,b\right)$ and $\left[c,d\right)$ satisfying $\#\nuab = b-a$ and $\#\nuxy{c}{d} = d-c$ intersect. We need to show that their union is another such interval.
 \par We WLOG assume that $a \leq c$. Then, $c \leq b$ (since the intervals intersect). If $b > d$, then the union of the two intervals is simply $\left[a,b\right)$, which makes our claim obvious. Hence, we WLOG assume that $b \leq d$. Thus, $a \leq c \leq b \leq d$. The union of the two intervals is therefore $\left[a, d\right)$, and we must show that $\#\nuxy{a}{d} = d-a$.
@@ -2909,7 +2911,7 @@ We need to show that if $\left[c,d\right)$ is a nonempty interval contained in $
 
 \begin{itemize}
 \item \textit{Case 1: We have $c> b_k$ (or $k=0$) and $d< a_{k+1}$ (or $k=r$).} In this case, every $i_p$ with $\supp^J(i_p) \subseteq [c,d)$ must satisfy $\supp(i_p) \subseteq [c,d)$. Hence, $\nupxy{c}{d}^{J} = \nuxy{c}{d}$, so that $\#\nupxy{c}{d}^{J} = \#\nuxy{c}{d} < d-c$, and we are done.
-\item \textit{Case 2: We have $c=b_k$ and $k>0$ (but not $d=a_{k+1}$ and $k<r$).} Assume (for the sake of contradiction) that $\#\nupxy{c}{d}^{J} \geq d-c$. Then, the $i_p$ satisfying $\supp^J(i_p) \subseteq [c,d)$ must satisfy $\supp(i_p) \subseteq [a_k, d)$ (since otherwise, $\supp(i_p)$ would intersect both $[b_{k-1}, a_k)$ and $[b_k, a_{k+1})$, something we have ruled out in the proof of \textbf{(b)}). Thus, $\#\nuxy{a_k}{d} \geq (d-c)+(b_k-a_k) = d-a_k$, which contradicts the minimality of $\bigcup_{k=0}^{r}[b_k,a_{k+1})$ (we could increase $b_k$ to $d$).
+\item \textit{Case 2: We have $c=b_k$ and $k>0$ (but not $d=a_{k+1}$ and $k<r$).} Assume for the sake of contradiction that $\#\nupxy{c}{d}^{J} \geq d-c$. Then, the $i_p$ satisfying $\supp^J(i_p) \subseteq [c,d)$ must satisfy $\supp(i_p) \subseteq [a_k, d)$, since otherwise, $\supp(i_p)$ would intersect both $[b_{k-1}, a_k)$ and $[b_k, a_{k+1})$, something we have ruled out in the proof of \textbf{(b)}. Thus, $\#\nuxy{a_k}{d} \geq (d-c)+(b_k-a_k) = d-a_k$, which contradicts the minimality of $\bigcup_{k=0}^{r}[b_k,a_{k+1})$: we could increase $b_k$ to $d$.
 \item \textit{Case 3: We have $d=a_{k+1}$ and $k<r$ (but not $c=b_k$ and $k>0$).} The argument here is analogous to Case 2.
 \item \textit{Case 4: Neither of the above.} Exercise.
 \end{itemize}
@@ -2917,7 +2919,7 @@ We need to show that if $\left[c,d\right)$ is a nonempty interval contained in $
 
 \begin{definition}
  
- In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxycap{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\seplistvar$} and the nonnegative integers $n_k:=a_{k+1}-b_k-\#\nuxycap{b_k}{a_{k+1}}$ are called their \textit{degrees}. (For $T$ with $\seplist(T)=\seplistvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component. All $n_k$ are positive, except for $n_0$ if $a_1 = 1$ and $n_r$ if $b_r = \lambda_1 + 1$.)
+ In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxycap{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\seplistvar$} and the nonnegative integers $n_k:=a_{k+1}-b_k-\#\nuxycap{b_k}{a_{k+1}}$ are called their \textit{degrees}. For $T$ with $\seplist(T)=\seplistvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component. All $n_k$ are positive, except for $n_0$ if $a_1 = 1$ and $n_r$ if $b_r = \lambda_1 + 1$.
 \end{definition}
 %\begin{remark}
 % Note that the conditions on $b_0,a_1,\dots,a_{r+1}$ guarantee that $\seplistvar$ is just a concatenation of partitions %$\nuxycap{b_0}{a_1},\nuxy{a_1}{b_1},\dots,\nuxycap{b_r}{a_{r+1}}$. 
@@ -2931,7 +2933,7 @@ We need to show that if $\left[c,d\right)$ is a nonempty interval contained in $
 \subsection{The structural theorem and its applications}
 It is easy to see that for a 12-rpp $T$, the number $\#\seplist(T)$ is equal to the number of mixed columns in $T$.
 
-Recall that $\OneTwoRPP$ denotes the set of all 12-rpps $T$ of shape $\lm$, and let $\OneTwoRPPCutvar$ denote its subset consisting of all 12-rpps $T$ with $\seplist(T)=\seplistvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components (which will be proven later):
+Recall that $\OneTwoRPP$ denotes the set of all 12-rpps $T$ of shape $\lm$, and let $\OneTwoRPPCutvar$ denote its subset consisting of all 12-rpps $T$ with $\seplist(T)=\seplistvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
 \begin{theorem}
 \label{thm:12rpps}
  Let $\seplistvar$ be an irreducible partition. Then for all $0\leq m\leq \lambda_1-\#\seplistvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\seplistvar$ mixed columns, $m$ $1$-pure columns and $(\lambda_1-\#\seplistvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\seplistvar$ we have
@@ -2940,6 +2942,8 @@ Recall that $\OneTwoRPP$ denotes the set of all 12-rpps $T$ of shape $\lm$, and 
  \sum_{T\in\OneTwoRPPCutvar} \x^{\ircont(T)}=(x_1x_2)^{\#\seplistvar} P_{\lambda_1-\#\seplistvar}(x_1,x_2).
  \end{equation}
 \end{theorem}
+
+Before we proceed to the proof, let us discuss some applications and examples.
 
 \begin{example}
  Each of the two 12-rpps on Figure \ref{fig:seplist} has two irreducible components. One of them is supported on the first two columns and the other one is supported on the last three columns. Here are all possible 12-rpps for each component:
@@ -2997,8 +3001,7 @@ After decomposing into irreducible components, we can obtain a formula for gener
 \[
 \OneTwoRPPCutvar \to \prod_{k=0}^r \operatorname{RPP}^{12}\left( \lm\big|_{[b_k,a_{k+1})} ; \nuxycap{b_k}{a_{k+1}}\right)
 \]
-is injective (since, as we know, the entries of a $T \in \OneTwoRPPCutvar$ in any column outside of the irreducible components are uniquely determined) and surjective (as one can ``glue'' rpps together).
-Now use Theorem \ref{thm:12rpps}.
+is injective, since, as we know, the entries of a $T \in \OneTwoRPPCutvar$ in any column outside of the irreducible components are uniquely determined. It is also surjective, as one can ``glue'' rpps together. Now use Theorem \ref{thm:12rpps}.
 \end{proof}
 
  For a 12-rpp $T$, the vectors $\seplist(T)$ and $\ceq(T)$ uniquely determine each other: if $(\ceq(T))_i=h$ then $\seplist(T)$ contains exactly $\lambda_{i+1}-\mu_i-h$ entries equal to $i$, and this correspondence is one-to-one. Therefore, the polynomials on both sides of (\ref{eq:thm12rppsComposite}) are equal to $Q_{\ceqvar}(x_1,x_2)$ where the vector $\ceqvar$ is the one that corresponds to $\seplistvar$.
@@ -3046,7 +3049,7 @@ Let $\seplistvar=(i_1,\dots,i_s)$ be an irreducible partition. We start with the
 \end{lemma}
 \begin{proof}[Proof of Lemma \ref{lemma:leftRight}]
 Suppose it is false and we have a $1$-pure column to the right of a $2$-pure column. Among all pairs $\left(a, b\right)$ such that column $a$ is $2$-pure and column $b$ is $1$-pure, and $b > a$, consider the one with smallest $b-a$. Then, the columns $a+1,\dots,b-1$ must all be mixed. %, otherwise if some column $k\in (a,b)$ is $1$-pure (resp., $2$-pure) then the columns $a$ and $k$ (resp., $k$ and $b$) would be closer to each other than $a$ and $b$.
-Therefore the set $\NS(T)$ contains $\{(i_{p+1},a+1),(i_{p+2},a+2),\dots,(i_{p+b-1-a},b-1)\}$ for some $p\in\NN$. And because $a$ is $2$-pure and $b$ is $1$-pure, each $i_{p+k}$ (for $k=1,\dots, b-1-a$) must be $\leq$ to the y-coordinate of the highest cell in column $a$ and $>$ than the y-coordinate of the lowest cell in column $b$. Thus, the support of any $i_{p+k}$ for $k=1,\dots, b-1-a$ is a subset of $[a+1,b)$, which contradicts the irreducibility of $\seplistvar$.
+Therefore the set $\NS(T)$ contains $\{(i_{p+1},a+1),(i_{p+2},a+2),\dots,(i_{p+b-1-a},b-1)\}$ for some $p\in\NN$. And because $a$ is $2$-pure and $b$ is $1$-pure, each $i_{p+k}$ for $k=1,\dots, b-1-a$ must be $\leq$ to the y-coordinate of the highest cell in column $a$ and $>$ than the y-coordinate of the lowest cell in column $b$. Thus, the support of any $i_{p+k}$ for $k=1,\dots, b-1-a$ is a subset of $[a+1,b)$, which contradicts the irreducibility of $\seplistvar$.
 \end{proof}
 
 
@@ -3055,13 +3058,13 @@ We proceed by strong induction on the number of columns in $\lm$. If the number 
 
 Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\seplist(T)=\seplistvar$ and with $m$ $1$-pure columns for $0\leq m\leq \lambda_1-\#\seplistvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q\geq 0$ be such that the leftmost $1$-pure column is column $q+1$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\seplistvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\seplistvar$ is obviously admissible but may not be irreducible with respect to $\widetilde{\lm}$, because it may happen that $\#\nuxy{2}{b+1}^{\widetilde{\lm}}=b-1$
 % [DG] You didn't "slide" $\widetilde{\lm}$ to the left (i.e., relabel the columns) in the previous proof, so better not do it here either.
-for some $b>1$. In this case we can remove these $b-1$ nonempty columns from $\widetilde{\lm}$ and remove the first $b-1$ entries from $\nu$ to get an irreducible partition again\footnote{This follows from Lemma \ref{lemma:irreducible} \textbf{(c)} (applied to the skew shape $\widetilde{\lm}$ and $k=1$). Here we are using the fact that if we apply Lemma \ref{lemma:irreducible} \textbf{(a)} to $\widetilde{\lm}$ instead of $\lm$, then we get $r = 1$ (because if $r \geq 2$, then $\#\nuxy{a_2}{b_2} = \#\nuxy{a_2}{b_2}^{\widetilde{\lm}} = b_2-a_2$ in contradiction to the irreducibility of $\lm$).}, to which we can apply the induction hypothesis. We are done with the case $m>0$. If $m<\lambda_1-\#\seplistvar$ then we can apply a mirrored argument to the last column, and it remains to note that the cases $m>0$ and $m<\lambda_1-\#\seplistvar$ cover everything (since the irreducibility of $\nu$ shows that $\lambda_1-\#\seplistvar>0$).
+for some $b>1$. In this case we can remove these $b-1$ nonempty columns from $\widetilde{\lm}$ and remove the first $b-1$ entries from $\nu$ to get an irreducible partition again\footnote{This follows from Lemma \ref{lemma:irreducible} \textbf{(c)} (applied to the skew shape $\widetilde{\lm}$ and $k=1$). Here we are using the fact that if we apply Lemma \ref{lemma:irreducible} \textbf{(a)} to $\widetilde{\lm}$ instead of $\lm$, then we get $r = 1$ (because if $r \geq 2$, then $\#\nuxy{a_2}{b_2} = \#\nuxy{a_2}{b_2}^{\widetilde{\lm}} = b_2-a_2$ in contradiction to the irreducibility of $\lm$).}, to which we can apply the induction hypothesis. We are done with the case $m>0$. If $m<\lambda_1-\#\seplistvar$ then we can apply a mirrored argument to the last column, and it remains to note that the cases $m>0$ and $m<\lambda_1-\#\seplistvar$ cover everything, since the irreducibility of $\nu$ shows that $\lambda_1-\#\seplistvar>0$.
 
-This inductive proof shows the uniqueness of the 12-rpp with desired properties. Its existence follows from a parallel argument, using the observation that the first $b-1$ columns of $\widetilde{\lm}$ can actually be filled in. This amounts to showing that for a representable $\seplistvar$, the set $\OneTwoRPPCutvar$ is non-empty in the case when $\lambda_1 = \#\seplistvar$ (so all columns of $T \in \OneTwoRPPCutvar$ must be mixed).
+This inductive proof shows the uniqueness of the 12-rpp with desired properties. Its existence follows from a parallel argument, using the observation that the first $b-1$ columns of $\widetilde{\lm}$ can actually be filled in. This amounts to showing that for a representable $\seplistvar$, the set $\OneTwoRPPCutvar$ is non-empty in the case when $\lambda_1 = \#\seplistvar$, that is, all columns of $T \in \OneTwoRPPCutvar$ must be mixed.
 
 This is clear when there is just one column. To prove it in the general case, we proceed by induction on the number of columns:
 
-If we had $1 \notin \supp(\seplistvar_1)$, then we would have $\supp(\seplistvar_1) \subseteq [2, \lambda_1+1)$, and thus $\supp(\seplistvar_j) \subseteq [2, \lambda_1+1)$ for every $j$ (since $\seplistvar$ is weakly decreasing and since $\supp(\seplistvar_1)$ is nonempty), which would lead to $\nuxy{2}{\lambda_1+1} = \seplistvar$ and thus $\#\nuxy{2}{\lambda_1+1} = \#\seplistvar = \lambda_1 > \lambda_1 + 1 - 2$, contradicting the representability of $\seplistvar$. Hence, we have $1 \in \supp(\seplistvar_1)$, so that we can fill the first column of $\lm$ with $1$'s and $2$'s in such a way that it becomes mixed and the $1$'s are displaced by $2$'s at level $\seplistvar_1$. Now, let $\widetilde{\lm}$ be the skew partition $\lm$ without its first column, and $\widetilde{\seplistvar}$ be the partition $\left(\seplistvar_2, \seplistvar_3, \ldots\right)$. Then, the partition $\widetilde{\seplistvar}$ is representable with respect to $\widetilde{\lm}$. (Otherwise we would have $\#\nuxy{2}{b+1}^{\widetilde{\lm}}>b-1$ for some $b \geq 1$, but then we would have $\supp(\seplistvar_1) \subseteq [1,b+1)$ as well and therefore $\#\nuxy{1}{b+1}>(b-1)+1=b$, contradicting the representability of $\lm$.) Thus we can fill in the entries in the cells of $\widetilde{\lm}$ by induction.
+If we had $1 \notin \supp(\seplistvar_1)$, then we would have $\supp(\seplistvar_1) \subseteq [2, \lambda_1+1)$, and thus $\supp(\seplistvar_j) \subseteq [2, \lambda_1+1)$ for every $j$, since $\seplistvar$ is weakly decreasing and since $\supp(\seplistvar_1)$ is nonempty. This would lead to $\nuxy{2}{\lambda_1+1} = \seplistvar$ and thus $\#\nuxy{2}{\lambda_1+1} = \#\seplistvar = \lambda_1 > \lambda_1 + 1 - 2$, contradicting the representability of $\seplistvar$. Hence, we have $1 \in \supp(\seplistvar_1)$, so that we can fill the first column of $\lm$ with $1$'s and $2$'s in such a way that it becomes mixed and the $1$'s are displaced by $2$'s at level $\seplistvar_1$. Now, let $\widetilde{\lm}$ be the skew partition $\lm$ without its first column, and $\widetilde{\seplistvar}$ be the partition $\left(\seplistvar_2, \seplistvar_3, \ldots\right)$. Then, the partition $\widetilde{\seplistvar}$ is representable with respect to $\widetilde{\lm}$. Otherwise we would have $\#\nuxy{2}{b+1}^{\widetilde{\lm}}>b-1$ for some $b \geq 1$, but then we would have $\supp(\seplistvar_1) \subseteq [1,b+1)$ as well and therefore $\#\nuxy{1}{b+1}>(b-1)+1=b$, contradicting the representability of $\lm$. Thus we can fill in the entries in the cells of $\widetilde{\lm}$ by induction.
 \end{proof}
 
 
