--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -234,8 +234,11 @@ show that our involution is a generalization of the latter.
 Finally, in Section \ref{sect.structure} we study the structure of
 reverse plane partitions with entries belonging to $\left\{1, 2\right\}$,
 which gives us an explicit formula for the
-$\mathbf{t}$-coefficients of $\g_\lm(x_1,x_2,0,0,\dots;\t)$. As a consequence, we get that the involution constructed in Sections \ref{sect.construction}
-and \ref{sect.proof} is the unique involution that shares certain natural properties with the classical Bender-Knuth involutions.
+$\mathbf{t}$-coefficients of $\g_\lm(x_1,x_2,0,0,\dots;\t)$.
+As a consequence, we get that the involution constructed in
+Sections \ref{sect.construction} and \ref{sect.proof} is the unique
+involution that shares certain natural properties with the classical
+Bender-Knuth involutions.
 
 An extended abstract of this paper, omitting the proofs, is to appear
 as \cite{GaGrLi16}.
@@ -429,13 +432,18 @@ instead of the content $\operatorname{cont}\left(  T\right)$.
 
 
   Namely, for a filling $T$ of a skew partition $\lm$, we define its
-\textit{irredundant content} as the weak composition $\operatorname*{ircont}\left(
-T\right) = \left(r_1,r_2,r_3,\dots\right)$ where $r_i$ is the number of \emph{columns}, rather than cells, of $T$ that contain an entry equal to $i$. For instance, if $T_a$, $T_b$, and $T_c$ are the fillings from Figure \ref{fig:fillings}, then their irredundant contents are
+\textit{irredundant content} as the weak composition
+$\ircont\left( T\right) = \left(r_1,r_2,r_3,\dots\right)$
+where $r_i$ is the number of \emph{columns}, rather than cells, of $T$
+that contain an entry equal to $i$.
+For instance, if $T_a$, $T_b$, and $T_c$ are the fillings from
+Figure \ref{fig:fillings}, then their irredundant contents are
 \begin{align*}
 \ircont(T_a)=(0,1,2,1,0,1),\ \ircont(T_b)=(0,1,3,1),\ \ircont(T_c)=(0,1,3,1,0,0,1),
 \end{align*}
 %it looked really weird on two lines 
-because, for example, $T_a$ has one column with a $4$ in it (so $(\ircont(T_a))_4=1$) and $T_b$ contains three columns with a $3$ (so $(\ircont(T_b))_3=3$).
+because, for example, $T_a$ has one column with a $4$ in it (so $(\ircont(T_a))_4=1$)
+and $T_b$ contains three columns with a $3$ (so $(\ircont(T_b))_3=3$).
 
 Notice that if $T$ is a semistandard tableau, then $\cont(T)$ and $\ircont(T)$ coincide.
 
@@ -453,7 +461,8 @@ general) not homogeneous, because whenever a column of an rpp $T$ contains an
 entry several times, the corresponding monomial $\mathbf{x}%
 ^{\operatorname*{ircont}\left(  T\right)  }$ \textquotedblleft
 counts\textquotedblright\ this entry only once. It is fairly clear that the
-highest-degree homogeneous component of $g_{\lambda/\mu}$ is $s_{\lambda/\mu}$. Therefore, $g_{\lambda/\mu}$ can be regarded as an
+highest-degree homogeneous component of $g_{\lambda/\mu}$ is $s_{\lambda/\mu}$.
+Therefore, $g_{\lambda/\mu}$ can be regarded as an
 inhomogeneous deformation of the Schur function $s_{\lambda/\mu}$.
 
 Lam and Pylyavskyy, in \cite[\S 9.1]{LamPyl}, have shown the following fact:
@@ -480,7 +489,10 @@ and elementary way.
 
 \subsection{Definition}
 
- Let $\t=\left(t_{1},t_{2},t_{3},\ldots\right)$ be a sequence of further indeterminates. For any weak composition $\alpha$, we define $\t^\alpha$ to be the monomial $t_1^{\alpha_1} t_2^{\alpha_2} t_3^{\alpha_3} \cdots$.
+ Let $\t=\left(t_{1},t_{2},t_{3},\ldots\right)$ be a sequence of further
+indeterminates.
+For any weak composition $\alpha$, we define $\t^\alpha$ to be the
+monomial $t_1^{\alpha_1} t_2^{\alpha_2} t_3^{\alpha_3} \cdots$.
 
  If $T$ is a filling of a skew partition $\lm$,
 then a \textit{redundant cell} of $T$ is a cell of $\lm$ whose entry is equal to the entry directly below it. That is, a cell $\left(  i,j\right)  $
