"rather than cells" removed
I think it's clear the second time (particularly as you give examples).
The first time I've made it a separate sentence, since the comma
construction makes the preceding sentence harder to read.

--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -177,9 +177,11 @@ of shape }\lambda/\mu}}\mathbf{x}^{\operatorname*{ircont}\left(  T\right)  },
 \]
 where $\mathbf{x}^{\operatorname*{ircont}\left(  T\right)  }$ is the monomial
 $x_{1}^{a_{1}}x_{2}^{a_{2}}x_{3}^{a_{3}}\cdots$ whose $i$-th exponent $a_{i}$
-is the number of \textit{columns}, rather than cells, %this is important enough to be repeated two times -- [PG]
-of $T$ containing the entry $i$. As proven in
-\cite[\S 9.1]{LamPyl}, this power series $g_{\lambda/\mu}$ is an inhomogeneous symmetric
+is the number of \textit{columns}
+of $T$ containing the entry $i$. Note that we are counting columns
+rather than cells here; thus, $g_{\lambda/\mu}$ is not homogeneous
+in general. As proven in
+\cite[\S 9.1]{LamPyl}, this power series $g_{\lambda/\mu}$ is a symmetric
 function.
 %Lam and Pylyavskyy connect the $g_{\lambda/\mu}$ to the
 %\textit{stable Grothendieck polynomials} $G_{\lambda/\mu}$ via a duality
@@ -434,7 +436,7 @@ instead of the content $\operatorname{cont}\left(  T\right)$.
   Namely, for a filling $T$ of a skew partition $\lm$, we define its
 \textit{irredundant content} as the weak composition
 $\ircont\left( T\right) = \left(r_1,r_2,r_3,\dots\right)$
-where $r_i$ is the number of \emph{columns}, rather than cells, of $T$
+where $r_i$ is the number of \emph{columns} of $T$
 that contain an entry equal to $i$.
 For instance, if $T_a$, $T_b$, and $T_c$ are the fillings from
 Figure \ref{fig:fillings}, then their irredundant contents are
