--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -226,7 +226,7 @@ in an algebra of operators.
 The present paper is organized as follows: In Section \ref{sect.notations}, we
 recall classical definitions and introduce notations pertaining to
 combinatorics and symmetric functions. In Section \ref{sect.def}, we define
-the refined dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$. We state
+the refined dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$; we state
 our main result that they are symmetric functions, and do the first steps of
 its proof, by reducing it to a purely combinatorial statement about the
 existence of an involution with certain properties. In Section \ref{sect.construction}, we describe the idea of constructing this involution in an elementary way without proofs. In Section
@@ -237,7 +237,7 @@ Finally, in Section \ref{sect.structure} we study the structure of
 reverse plane partitions with entries belonging to $\left\{1, 2\right\}$,
 which gives us an explicit formula for the
 $\mathbf{t}$-coefficients of $\g_\lm(x_1,x_2,0,0,\dots;\t)$.
-As a consequence, we get that the involution constructed in
+As a consequence, we observe that the involution constructed in
 Sections \ref{sect.construction} and \ref{sect.proof} is the unique
 involution that shares certain natural properties with the classical
 Bender-Knuth involutions.
@@ -291,7 +291,8 @@ _{+}=\left\{  1,2,3,\ldots\right\}  $.
 A \textit{partition} is a weak composition $\left(  \alpha_{1},\alpha
 _{2},\alpha_{3},\ldots\right)  $ satisfying $\alpha_{1}\geq\alpha_{2}
 \geq\alpha_{3}\geq\cdots$.
-As usual, we often omit trailing zeroes when writing a partition. For instance, the partition $(5,2,1,0,0,0,\ldots)$ can be also written as $(5,2,1,0)$ or $(5,2,1)$.
+As usual, we often omit trailing zeroes when writing a weak
+composition. For instance, the partition $(5,2,1,0,0,0,\ldots)$ can be also written as $(5,2,1,0)$ or $(5,2,1)$.
 
 We identify each partition $\lambda$ with the subset
 $\left\{ \left( i, j \right) \in \Nplus^2 \mid j \leq \lambda_i \right\}$
@@ -380,7 +381,9 @@ field of research, and are closely related to Young diagrams and tableaux; see
 
 
 A \textit{symmetric function} is defined to be a
-power series in countably many indeterminates $x_1,x_2,x_3,\dots$ over $\Z$ with bounded degrees of monomials that is invariant under permutations of $x_1,x_2,x_3,\dots$ with finite support. 
+power series in countably many indeterminates $x_1,x_2,x_3,\dots$ over $\Z$
+that is invariant under permutations of $x_1,x_2,x_3,\dots$ with finite support
+and that has the degrees of its monomials bounded from above. 
 % A power series is said to be \textit{bounded-degree}
 % if there is an $N \in \mathbb{N}$ such that only monomials of degree $\leq N$
 % appear in the series.
@@ -434,7 +437,8 @@ instead of the content $\operatorname{cont}\left(  T\right)$.
 
 
   Namely, for a filling $T$ of a skew partition $\lm$, we define its
-\textit{irredundant content} as the weak composition
+\textit{irredundant content} (or, by way of abbreviation, its
+\textit{ircont statistic}) as the weak composition
 $\ircont\left( T\right) = \left(r_1,r_2,r_3,\dots\right)$
 where $r_i$ is the number of \emph{columns} of $T$
 that contain an entry equal to $i$.
@@ -505,7 +509,8 @@ cells.
 
 
  If $T$ is a filling of $\lm$,
-then we define the \textit{column equalities vector} of $T$ to be the weak composition
+then we define the \textit{column equalities vector} (or, by way of
+abbreviation, the \textit{ceq statistic}) of $T$ to be the weak composition
 $\operatorname{ceq}\left(  T\right)=\left(c_1,c_2,c_3,\dots\right)$
 where $c_i$ is the number of $j\in\mathbb{N}_{+}$ such that $\left(  i,j\right)$ is a redundant cell of $T$. Visually speaking, $\left(  \operatorname{ceq}\left(  T\right)  \right)
 _{i}$ is the number of columns of $T$ whose entry in the $i$-th row equals
@@ -705,6 +710,7 @@ which preserves the ceq statistic and switches the number of columns containing 
  \begin{itemize}
   \item Ignore all entries of $T$ not equal to $i$ or $i+1$. 
   \item Replace all occurrences of $i$ by $1$ and all occurrences of $i+1$ by $2$. We get a 12-rpp $T'$ of some smaller shape, which is still a skew partition.
+  (The skew partition itself is not always uniquely determined, but its Young diagram is, which is all that matters to us here.)
 %   \footnote{Fine print: It has the form $\lm$ for some skew partition $\lm$, but this skew partition $\lm$ is not always uniquely determined (e.g., $\left(3,1,1\right)/\left(2,1\right)$ and $\left(3,2,1\right)/\left(2,2\right)$ have the same Young diagram). But the involution $\mathbf{B}$ constructed in the proof of Lemma~\ref{lem.BK} depends only on the Young diagram of $\lm$, and thus the choice of $\lm$ does not matter.}.
   \item Replace $T'$ by $\B(T')$.
   \item In $\B(T')$, replace back all occurrences of $1$ by $i$ and all occurrences of $2$ by $i+1$.
@@ -966,7 +972,8 @@ of $T$ is mixed. For instance, if $T$ is
 %EndExpansion
 \]
 then $\operatorname*{sep}\nolimits_{1}T=4$, $\operatorname*{sep}\nolimits_{3}T=4$, and
-$\operatorname*{sep}\nolimits_{5}T=2$, and there are no other $k$ for which $\operatorname*{sep}\nolimits_{k}T$ is defined. Thus $\operatorname*{seplist}T=\left(  4,4,2\right)  $.
+$\operatorname*{sep}\nolimits_{5}T=2$, and there are no other $k$ for which $\operatorname*{sep}\nolimits_{k}T$ is defined;
+thus, $\operatorname*{seplist}T=\left(  4,4,2\right)  $.
 
 We say that a 12-table $T$ is \textit{benign} if the list
 $\operatorname*{seplist}T$ is weakly decreasing. For
@@ -1199,7 +1206,7 @@ Let $k\in\mathbb{N}_{+}$. Let $P\in\BenignTables$. Assume for the whole Subsecti
 is a descent of $P$. Thus, the $k$-th column of $P$ must contain at least one
 $2$. Hence, the $k$-th column of $P$ is either mixed or 2-pure. Similarly, the
 $\left(  k+1\right)  $-th column of $P$ is either mixed or 1-pure. But the
-$k$-th and the $\left(  k+1\right)  $-th columns of $P$ cannot both be mixed by (\ref{eq.benign.not-both-mixed}), because $P$ is benign. Thus,
+$k$-th and the $\left(  k+1\right)  $-th columns of $P$ cannot both be mixed (by (\ref{eq.benign.not-both-mixed}), because $P$ is benign). Thus,
 exactly one of the following three statements holds:
 
 \begin{itemize}
@@ -2094,24 +2101,23 @@ $\operatorname*{Norm}\left( Z\right)  $ is a one-element set.
 \item By Lemma \ref{prop.descent-resolution-hyps}, for every
 $B\in\mathbf{Z}$ and $C\in\mathbf{Z}$, we have
 $\operatorname*{Norm}\left(  B\right)  \cap\operatorname*{Norm}\left(
-C\right)  \neq\varnothing$ by Lemma 5.8 applied to $A=T$.
-
-% \ \ \ \ \footnote{In more detail:
-% Let $B\in\mathbf{Z}$ and $C\in\mathbf{Z}$.
-% By Lemma \ref{prop.descent-resolution-hyps} (applied to $A=T$)
-% there exists
-% a $D\in\BenignTables$ such that $B\overset{\ast}{\Rrightarrow}D$ and
-% $C\overset{\ast}{\Rrightarrow}D$. This $D$ has
-% $\ell\left( T\right)  >\ell\left(  B\right)
-% \geq\ell\left(  D\right)  $ (by Lemma \ref{lem.descent-resolution-props}
-% \textbf{(d)} and
-% Lemma \ref{lem.descent-resolution-*props} \textbf{(d)}, respectively).
-% Hence, by (\ref{pf.prop.BK.norm.indhyp}), the set
-% $\operatorname*{Norm}\left(  D\right)  $ is a one-element set. Its unique element
-% clearly lies in both $\operatorname*{Norm}\left(  B\right)  $ and
-% $\operatorname*{Norm}\left(  C\right)  $, so
-% $\operatorname*{Norm}\left(
-% B\right)  \cap\operatorname*{Norm}\left(  C\right)  \neq\varnothing$.
+C\right)  \neq\varnothing$.
+(In more detail:
+ Let $B\in\mathbf{Z}$ and $C\in\mathbf{Z}$.
+ By Lemma \ref{prop.descent-resolution-hyps}, applied to $A=T$,
+ there exists
+ a $D\in\BenignTables$ such that $B\overset{\ast}{\Rrightarrow}D$ and
+ $C\overset{\ast}{\Rrightarrow}D$. This $D$ has
+ $\ell\left( T\right)  >\ell\left(  B\right)
+ \geq\ell\left(  D\right)  $, by Lemma \ref{lem.descent-resolution-props}
+ \textbf{(d)} and
+ Lemma \ref{lem.descent-resolution-*props} \textbf{(d)}, respectively.
+ Hence, by (\ref{pf.prop.BK.norm.indhyp}), the set
+ $\operatorname*{Norm}\left(  D\right)  $ is a one-element set. Its unique element
+ clearly lies in both $\operatorname*{Norm}\left(  B\right)  $ and
+ $\operatorname*{Norm}\left(  C\right)  $, so
+ $\operatorname*{Norm}\left(
+ B\right)  \cap\operatorname*{Norm}\left(  C\right)  \neq\varnothing$.)
 % 
 % % [DG] You will probably want to shorten this. Fine with me, but please
 % % don't remove this nontrivial argument completely.
