rewrite first sentences
Grothendiecks aren't really polynomials, and there were too many "of"s
in that sentence.

--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -139,7 +139,7 @@ and $2$.
 
 \section{Introduction}
 
-\emph{Grothendieck polynomials} were introduced by Lascoux and Sch\"{u}tzenberger \cite{LasSch82} as polynomial representatives of classes of structure sheaves of Schubert varieties in the $K$-theory of flag manifolds. \emph{Stable Grothendieck polynomials} were introduced by Fomin and Kirillov \cite{FomKir96} as stable limits of certain sequences of Grothendieck polynomials. In particular, the stable Grothendieck polynomials $G_\lambda$ represent classes of structure sheaves of Schubert varieties in the $K$-theory of the Grassmannian, and can be seen as $K$-theory analogues of Schur functions. Buch \cite{Buch02} gave a combinatorial formula for $G_\lambda$ in terms of set-valued tableaux and described a Littlewood-Richardson rule for their structure coefficients.
+\emph{Grothendieck polynomials} were introduced by Lascoux and Sch\"{u}tzenberger \cite{LasSch82} to model classes of structure sheaves of Schubert varieties in the $K$-theory of flag manifolds. \emph{Stable Grothendieck polynomials} were introduced by Fomin and Kirillov \cite{FomKir96} as stable limits of certain sequences of Grothendieck polynomials. In particular, the stable Grothendieck polynomials $G_\lambda$ represent classes of structure sheaves of Schubert varieties in the $K$-theory of the Grassmannian, and can be seen as $K$-theory analogues of Schur functions. Buch \cite{Buch02} gave a combinatorial formula for $G_\lambda$ in terms of set-valued tableaux and described a Littlewood-Richardson rule for their structure coefficients.
 
 Thomas Lam and Pavlo Pylyavskyy, in \cite[\S 9.1]{LamPyl}, and earlier Mark
 Shimozono and Mike Zabrocki in unpublished work of 2003, studied \textit{dual
@@ -3077,7 +3077,7 @@ If we had $1 \notin \supp(\seplistvar_1)$, then we would have $\supp(\seplistvar
 %European Association for Theoretical Computer Science, February 2003.\newline%
 %\texttt{\url{http://www.ii.uib.no/~bezem/NL/}}
 
-\bibitem[Buch02]{Buch02}Anders Buch, \textit{A Littlewood-Richardson rule for the K-theory of Grassmannians}, Acta Math.\ 189 (2002), 37---78.
+\bibitem[Buch02]{Buch02}Anders Buch, \textit{A Littlewood-Richardson rule for the K-theory of Grassmannians}, Acta Math.\ 189 (2002), 37--78.
 
 \bibitem[FomGre06]{FomGre}Sergey Fomin, Curtis Greene, \textit{Noncommutative
 Schur functions and their applications}, Discrete Mathematics 306 (2006) 1080--1096.
