--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -709,11 +709,11 @@ which preserves the ceq statistic and switches the number of columns containing 
  This Lemma implies Theorem \ref{thm.BK}: for any $i\in\Nplus$ and for $T$ an rpp of shape $\lm$, we construct $\B_i(T)$ as follows: 
  \begin{itemize}
   \item Ignore all entries of $T$ not equal to $i$ or $i+1$. 
-  \item Replace all occurrences of $i$ by $1$ and all occurrences of $i+1$ by $2$. We get a 12-rpp $T'$ of some smaller shape, which is still a skew partition.
+  \item Replace all entries $i$ by $1$ and all entries $i+1$ by $2$. We get a 12-rpp $T'$ of some smaller shape, which is still a skew partition.
   (The skew partition itself is not always uniquely determined, but its Young diagram is, which is all that matters to us here.)
 %   \footnote{Fine print: It has the form $\lm$ for some skew partition $\lm$, but this skew partition $\lm$ is not always uniquely determined (e.g., $\left(3,1,1\right)/\left(2,1\right)$ and $\left(3,2,1\right)/\left(2,2\right)$ have the same Young diagram). But the involution $\mathbf{B}$ constructed in the proof of Lemma~\ref{lem.BK} depends only on the Young diagram of $\lm$, and thus the choice of $\lm$ does not matter.}.
   \item Replace $T'$ by $\B(T')$.
-  \item In $\B(T')$, replace back all occurrences of $1$ by $i$ and all occurrences of $2$ by $i+1$.
+  \item In $\B(T')$, replace back all entries $1$ by $i$ and all entries $2$ by $i+1$.
   \item Finally, restore the remaining entries of $T$ that were ignored on the first step.
  \end{itemize}
  
