I use that notation

--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -310,7 +310,7 @@ partition")?
 %[PG] Fulton's book is pretty good for that. English notation, ``filling'', and so on. Although he uses ``skew diagram'' instead of ``skew partition'', but that's probably not that important.
 \end{todo}
 
-A \textit{skew partition} $\lambda/\mu$ is a pair $\left(\lambda, \mu\right)$ of partitions satisfying $\mu\subseteq\lambda$ (as subsets of the plane). In this case, we shall also often use the notation $\lambda/\mu$ for the set-theoretic difference of $\lambda$ and $\mu$.
+A \textit{skew partition} $\lambda/\mu$ is a pair $\left(\lambda, \mu\right)$ of partitions satisfying $\mu\subseteq\lambda$ (as subsets of the plane). In this case, we shall also often use the notation $\lambda/\mu$ for the set-theoretic difference of $\lambda$ and $\mu$; this difference is called the \textit{Young diagram} of $\lm$.
 % We cannot *identify* the pair with the set-theoretic difference since this assignment fails to be injective.
 
  If $\lm$ is a skew partition, then a \textit{filling} of $\lm$ means a map $T:\lm\rightarrow\Nplus$. It is visually represented by drawing $\lm$ and filling each box $c$ with the entry $T(c)$. Three examples of a filling can be found on Figure \ref{fig:fillings}.
