--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -3107,7 +3107,7 @@ Hopf algebras and }$K$\textit{-homology of Grassmanians},
 was later published in: International Mathematics Research Notices, Vol. 2007,
 Article ID rnm125, 48 pages. doi:10.1093/imrn/rnm125.
 
-\bibitem[LasSch82]{LasSch82}Alain Lascoux, Marcel-Paul Sch\"{u}tzenberger, \textit{Structure de Hopf de l'anneau de cohomologie et de l'anneau de Grothendieck d'une varit de drapeaux}, C.\ R.\ Acad.\ Sci.\ Paris Sr.\ I Math 295 (1982), 11, 629--633.
+\bibitem[LasSch82]{LasSch82}Alain Lascoux, Marcel-Paul Sch\"{u}tzenberger, \textit{Structure de Hopf de l'anneau de cohomologie et de l'anneau de Grothendieck d'une vari\'et\'e de drapeaux}, C.\ R.\ Acad.\ Sci.\ Paris Sr.\ I Math 295 (1982), 11, 629--633.
 
 \bibitem[Macdon95]{Macdon95}Ian G. Macdonald, \textit{Symmetric Functions and
 Hall Polynomials}, 2nd edition, Oxford University Press 1995.
