--- a/groth1-ejc.tex
+++ b/groth1-ejc.tex
@@ -135,6 +135,9 @@ involutions on the set of reverse plane partitions generalizing the
 Bender-Knuth involutions on semistandard tableaux, whereas the other
 classifies the structure of reverse plane partitions with entries $1$
 and $2$.
+
+  
+  \bigskip\noindent \textbf{Keywords:} Bender-Knuth involutions, reverse plane partitions, dual stable Grothendieck polynomials, symmetric functions.
 \end{abstract}
 
 \section{Introduction}
